# PVZ-XPLAT

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  fix_braces_errors.py  舞王僵尸文件清单.md
Libs/: README.md
Libs/SDL-Mixer-X/cmake/: libSDL2.cmake
Libs/SDL/build-scripts/: build-release.py  create-release.py  setup-gdk-desktop.py
Libs/SDL_net/src/: version.rc
Resources/compiled/reanim/: LoadBar_Zombiehead.reanim.compiled
Resources/properties/: resources.xml
android-project/: build.gradle
android-project/app/: build.gradle
android-project/gradle/wrapper/: gradle-wrapper.properties
src/: ConstEnums.h  GameConstants.h  LawnApp.cpp  LawnApp.h  Resources.cpp  Resources.h  main.cpp
src/Lawn/: Board.cpp  Board.h  Challenge.cpp  Challenge.h  Coin.cpp  Coin.h  CursorObject.cpp  CutScene.cpp  GameObject.h  GridItem.cpp  GridItem.h  LawnCommon.cpp  LawnCommon.h  LawnMower.cpp  LawnMower.h  MessageWidget.cpp  MessageWidget.h  Plant.cpp  Projectile.cpp  SeedPacket.cpp  ToolTipWidget.cpp  ToolTipWidget.h  WidgetMessage.cpp  WidgetMessage.h  ZenGarden.cpp  ZenGarden.h  Zombie.cpp  Zombie.h
src/Lawn/System/: DataSync.cpp  Music.cpp  Music.h  PlayerInfo.cpp  PoolEffect.cpp  ProfileMgr.cpp  ReanimationLawn.cpp  ReanimationLawn.h  SaveGame.cpp  SaveGame.h
src/Lawn/Widget/: AchievementsScreen.cpp  AlmanacDialog.cpp  AwardScreen.cpp  ChallengeScreen.cpp  ChallengeScreen.h  CheatDialog.cpp  CheatDialog.h  ContinueDialog.cpp  CreditScreen.cpp  CreditScreen.h  GameButton.cpp  GameButton.h  GameSelector.cpp  GameSelector.h  LawnDialog.cpp  LawnDialog.h  NewOptionsDialog.cpp  NewOptionsDialog.h  PakDialog.cpp  SeedChooserScreen.cpp  StoreScreen.cpp  StoreScreen.h  TitleScreen.cpp  TitleScreen.h  UserDialog.cpp
src/Lawn/system/: DataSync.cpp  DataSync.h  GameNetworkManager.cpp  GameNetworkManager.h  Music.cpp  Music.h  NetworkSync.cpp  NetworkSync.h  PlayerInfo.cpp  PlayerInfo.h  PoolEffect.cpp  PoolEffect.h  ProfileMgr.cpp  ProfileMgr.h  ReanimationLawn.cpp  ReanimationLawn.h  SaveGame.cpp  SaveGame.h
src/Lawn/widgets/: AchievementsScreen.cpp  AlmanacDialog.cpp  AwardScreen.cpp  ChallengeScreen.cpp  CheatDialog.cpp  ContinueDialog.cpp  CreditScreen.cpp  CreditScreen.h  GameButton.cpp  GameSelector.cpp  GameSelector.h  ImitaterDialog.cpp  LawnDialog.cpp  LawnDialog.h  NewOptionsDialog.cpp  NewOptionsDialog.h  NewUserDialog.cpp  PakDialog.cpp  PakDialog.h  SeedChooserScreen.cpp  StoreScreen.cpp  StoreScreen.h  TitleScreen.cpp  TitleScreen.h  UserDialog.cpp
src/Sexy.TodLib/: Attachment.h  Definition.cpp  Definition.h  EffectSystem.cpp  EffectSystem.h  FilterEffect.cpp  FilterEffect.h  ReanimAtlas.cpp  ReanimAtlas.h  Reanimator.cpp  Reanimator.h  TodCommon.cpp  TodCommon.h  TodDebug.cpp  TodDebug.h  TodFoley.cpp  TodFoley.h  TodList.cpp  TodParticle.cpp  TodParticle.h  TodStringFile.cpp  TodStringFile.h  TodTriangleRenderer.h
src/Sexy.TodLib/SWTri/: TodDrawTriangleInc.cpp  TodDrawTriangleUnified.cpp
src/SexyAppFramework/: Common.cpp  Common.h  SexyApp.cpp  SexyApp.h  SexyAppBase.cpp  SexyAppBase.h
src/SexyAppFramework/glad/: glad.c
src/SexyAppFramework/graphics/: CMakeLists.txt  Color.cpp  Color.h  Font.cpp  Font.h  GLImage.cpp  GLInterface.cpp  GLInterface.h  Graphics.cpp  Graphics.h  ImageFont.cpp  ImageFont.h  MemoryImage.cpp  MemoryImage.h  SDLImage.cpp  SDLImage.h  SWTri.cpp  SWTri.h  SharedImage.cpp  SharedImage.h  Window.cpp  stb_image.h
src/SexyAppFramework/graphics/inc_routines/: MI_SlowStretchBlt.inc
src/SexyAppFramework/imagelib/: ImageLib.cpp  ImageLib.h
src/SexyAppFramework/imagelib/zlib/: infback.c  zconf.h
src/SexyAppFramework/misc/: AutoCrit.h  Buffer.cpp  CritSect.cpp  CritSect.h  MTRand.cpp  MTRand.h  ModVal.cpp  PerfTimer.cpp  RegEmu.cpp  ResourceManager.cpp  ResourceManager.h  SmartPtr.h  XMLParser.cpp  XMLParser.h
src/SexyAppFramework/paklib/: PakInterface.cpp  PakInterface.h
src/SexyAppFramework/platform/android/: Input.cpp  Window.cpp
src/SexyAppFramework/platform/android/graphics/: GLInterface.cpp  Window.cpp
src/SexyAppFramework/platform/emscripten/: EmscriptenPlatform.h  Input.cpp
src/SexyAppFramework/platform/emscripten/graphics/: GLInterface.cpp  GLInterface.h  Window.cpp
src/SexyAppFramework/platform/linux/: Window.cpp
src/SexyAppFramework/platform/linux/graphics/: GLInterface.cpp  GLInterface.h  Window.cpp
src/SexyAppFramework/platform/macos/graphics/: GLInterface.cpp  GLInterface.h  Window.cpp
src/SexyAppFramework/platform/pc/: Input.cpp  Window.cpp
src/SexyAppFramework/platform/pc/graphics/: GLInterface.cpp  GLInterface.h  Interface.cpp  Window.cpp
src/SexyAppFramework/platform/windows/graphics/: GLInterface.cpp  GLInterface.h
src/SexyAppFramework/sound/: BassSoundInstance.h  BassSoundManager.cpp  BassSoundManager.h  CMakeLists.txt  DummyMusicInterface.h  DummySoundInstance.h  SDLMusicInterface.cpp  SDLSoundManager.cpp  SDLSoundManager.h  SoundManager.h
src/SexyAppFramework/widget/: ButtonListener.h  ButtonWidget.cpp  Checkbox.cpp  Dialog.cpp  Dialog.h  DialogButton.cpp  EditWidget.cpp  HyperlinkWidget.cpp  ListWidget.cpp  ScrollbarWidget.cpp  ScrollbarWidget.h  ScrollbuttonWidget.cpp  Slider.cpp  TextWidget.cpp  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetManager.cpp  WidgetManager.h
src/SexyAppFramework/zlib/: inflate.c
tools/: README.md  copy_resources.sh  create_pak.py  merge_jpg_alpha.py  unpack_pak.bat  unpack_pak.py
web_project/: build_log.txt  start_web_server.ps1  web_build.ps1  web_server.py
web_project/build_emscripten/: .ninja_deps  .ninja_log  build.ninja  re-plants-vs-zombies.js
web_project/build_emscripten/Libs/SDL/: cmake_uninstall.cmake  sdl2-config  sdl2.pc
web_project/build_emscripten/Libs/SDL-Mixer-X/: SDL2_mixer_ext.pc
web_project/build_emscripten/Libs/SDL/include-config/: SDL_config.h
xcode-project/: CMakeLists.txt
xcode-project/SDL/SDL.xcodeproj/project.xcworkspace/xcuserdata/lvqiaoqiaoimac.xcuserdatad/: UserInterfaceState.xcuserstate
xcode-project/SDL/SDL.xcodeproj/xcuserdata/lvqiaoqiaoimac.xcuserdatad/xcschemes/: xcschememanagement.plist
(+213 files in other folders)
