# 设置输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Apple Development")

# 定义资源目录
set(RESOURCES_DIR "${CMAKE_SOURCE_DIR}/../src/Resources")
set(APP_RESOURCES_DIR "${CMAKE_BINARY_DIR}/REPVZ-Lite.app/Contents/Resources")

# 设置 macOS 特定的属性
set_target_properties(REPVZ-Lite PROPERTIES
    MACOSX_BUNDLE TRUE
    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.replantsvszombies
    MACOSX_BUNDLE_BUNDLE_NAME "RE Plants vs Zombies"
    MACOSX_BUNDLE_BUNDLE_VERSION 1.0.0
    MACOSX_BUNDLE_SHORT_VERSION_STRING 1.0
)

# 配置 Xcode 项目使用 CMake 构建
set(CMAKE_XCODE_ATTRIBUTE_GCC_PREPROCESSOR_DEFINITIONS "$(inherited) MACOS")
set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++17")
set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
set(CMAKE_XCODE_ATTRIBUTE_ENABLE_BITCODE "NO")
set(CMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH "YES")
set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED "NO")
set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "")

# 设置构建后命令
add_custom_command(TARGET REPVZ-Lite POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${RESOURCES_DIR} ${APP_RESOURCES_DIR}
    COMMENT "Copying resources to app bundle"
)

# 安装目标
install(TARGETS REPVZ-Lite
    BUNDLE DESTINATION .
    RUNTIME DESTINATION bin
)

# 安装资源文件
install(DIRECTORY ${RESOURCES_DIR}
    DESTINATION "REPVZ-Lite.app/Contents/Resources"
    FILES_MATCHING PATTERN "*"
) 
